@@ -4,7 +4,7 @@
     package="org.ttrssreader"
     android:installLocation="auto"
     android:versionName="0.9.1"
-    android:versionCode="910">
+    android:versionCode="911">
 
     <application
         android:icon="@drawable/icon"
